--- a/vue/src/assets/base.css
+++ b/vue/src/assets/base.css
@@ -1,5 +1,39 @@
-/* color palette from <https://github.com/vuejs/theme> */
+html,
+body,
+* {
+  padding: 0;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+  font-size: 62.5%;
+  box-sizing: border-box;
+  background-color: var(--dark-blue);
+}
+
 :root {
+  --h1: 2.986rem;
+  --h2: 2.488rem;
+  --h3: 2.074rem;
+  --h4: 1.728rem;
+  --h5: 1.44rem;
+  --h6: 1.2rem;
+  --p: 1rem;
+  --small: 0.833rem;
+  --extraSmall: 0.694rem;
+  --indigo-black: #22092c;
+  --dark-red: #872341;
+  --normal-red: #be3144;
+  --orange: #f05941;
+  --dark-blue: #13293d;
+  --dark-green: #0e5c45;
+  --dark-purple: #3e1f47;
+  --dark-gray: #333333;
+}
+
+h2 {
+  font-size: var(h2);
+}
+/* color palette from <https://github.com/vuejs/theme> */
+/* :root {
   --vt-c-white: #ffffff;
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
@@ -19,10 +53,9 @@
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
-}
+} */
 
-/* semantic color variables for this project */
-:root {
+/* semantic color variables for this project :root {
   --color-background: var(--vt-c-white);
   --color-background-soft: var(--vt-c-white-soft);
   --color-background-mute: var(--vt-c-white-mute);
@@ -48,39 +81,4 @@
     --color-heading: var(--vt-c-text-dark-1);
     --color-text: var(--vt-c-text-dark-2);
   }
-}
-
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  font-weight: normal;
-}
-
-body {
-  min-height: 100vh;
-  color: var(--color-text);
-  background: var(--color-background);
-  transition:
-    color 0.5s,
-    background-color 0.5s;
-  line-height: 1.6;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  font-size: 15px;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+} */
