--- a/vue/src/assets/main.css
+++ b/vue/src/assets/main.css
@@ -7,29 +7,25 @@
   font-weight: normal;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+a {
+  color: var(--orange);
   transition: 0.4s;
   padding: 3px;
 }
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: var(--normal-red);
+    color: white;
   }
 }
 
+/* Responsive styles */
 @media (min-width: 1024px) {
   body {
     display: flex;
-    /* place-items: center; */
-  }
-
-  #app {
-    /* display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem; */
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
   }
 }
